textwrap issue in Boards dropdown

--- a/views/styles.scss
+++ b/views/styles.scss
@@ -329,6 +329,7 @@ ul.boards-list {
 
 .dropdown-menu .divider-section{
    overflow: visible;
+   white-space: nowrap;
    font-weight: bold;
    background-color: #F3F3F3;
    border-bottom-width: 1px;
